# lauren

./: .gitignore  Makefile  README.rst  pyproject.toml
lauren/: __init__.py
lauren/core/: __init__.py  app.py  base.py  config.py  error.py  events.py  exceptions.py  plugin.py
lauren/core/internal/: base.py
lauren/utils/: __init__.py  filesystem.py  logging.py  opentelemetry.py
tests/: config_test.py
